Fix responsive bug on mobile Files Modified:     1. index.html:         Added meta tag to recognize mobile viewport     2. index.css;         Added styling to container class to fit screen         on small viewports

--- a/index.css
+++ b/index.css
@@ -49,8 +49,6 @@ a:hover {
 }
 
 .jumbotron {
-  margin-left: 20%;
-  margin-right: 20%;
   padding-top: 30px;
   padding-bottom: 20px;
 }
@@ -115,26 +113,82 @@ a:hover {
   cursor: pointer;
 }
 
-@media screen and (max-width: 991px) {
-  /* start of large tablet styles */
+/* 
+  ##Device = Desktops
+  ##Screen = 1281px to higher resolution desktops
+*/
+
+@media (min-width: 1281px) {
   .jumbotron {
     margin-left: 20%;
     margin-right: 20%;
   }
 }
 
-@media screen and (max-width: 767px) {
-  /* start of medium tablet styles */
+/* 
+  ##Device = Laptops, Desktops
+  ##Screen = B/w 1025px to 1280px
+*/
+
+@media (min-width: 1025px) and (max-width: 1280px) {
   .jumbotron {
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 20%;
+    margin-right: 20%;
   }
 }
 
-@media screen and (max-width: 600px) {
-  /* start of phone styles */
+/* 
+  ##Device = Tablets, Ipads (portrait)
+  ##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .jumbotron {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+}
+
+/* 
+  ##Device = Tablets, Ipads (landscape)
+  ##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  .jumbotron {
+    margin-left: 20%;
+    margin-right: 20%;
+  }
+}
+
+/* 
+  ##Device = Low Resolution Tablets, Mobiles (Landscape)
+  ##Screen = B/w 481px to 767px
+*/
+
+@media (min-width: 481px) and (max-width: 767px) {
+  .jumbotron {
+    margin-left: 2%;
+    margin-right: 2%;
+  }
+  .container {
+    height: 70%;
+    width: 100%;
+  }
+}
+
+/* 
+  ##Device = Most of the Smartphones Mobiles (Portrait)
+  ##Screen = B/w 320px to 479px
+*/
+
+@media (min-width: 320px) and (max-width: 480px) {
   .jumbotron {
     margin-left: 0%;
     margin-right: 0%;
+  }
+  .container {
+    height: 70%;
+    width: 100%;
   }
 }
